updated environment, title format

--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: pxp-combining-colors
+name: pxp-random-forest
 channels:
   - conda-forge
   - defaults
@@ -8,7 +8,8 @@ dependencies:
   - pandas==2.3.1
   - matplotlib==3.10.0
   - jupyterlab==4.4.4
+  - scikit-learn==1.6.1
+  - seaborn==0.13.2
+  - skimpy==0.0.18
   - pip==25.2
-  - pip:
-    - plotly==6.2.0
-    - kaleido==0.2.1
+
